--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "joi": "^17.6.0",
     "koa": "^2.13.4",
     "koa-router": "^12.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.5.3",
     "nodemon": "^2.0.19"
   },
