--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mongodb+srv://SanjayKumar:Sanjay%402001@cluster.pwkikpb.mongodb.net/db
+DATABASE_URL=mongodb+srv://SanjayKumar:Sanjay%402001@cluster.kfsxovy.mongodb.net/test
 PORT=4000
